--- a/public/assets/css/home11-style.css
+++ b/public/assets/css/home11-style.css
@@ -470,8 +470,6 @@
 .serv-ms .item {
   color                   : #fff;
   /* padding              : 40px; */
-  height                  : 100vh;
-  min-height              : 500px;
   display                 : -webkit-box;
   display                 : -ms-flexbox;
   display                 : flex;
@@ -500,7 +498,7 @@
 
 .serv-ms .item img {
   width        : 100%;
-  height       : 100%;
+  height       : 600px;
   object-fit   : cover;
   border-radius: 10px;
   box-shadow   : 20px 25px 20px #b1a5a5;
