--- a/public/assets/css/home11-style.css
+++ b/public/assets/css/home11-style.css
@@ -809,7 +809,7 @@
 }
 .shop-duo .duo-img {
   width: 100%;
-  height: 70vh;
+  height: 100vh;
   max-height: none;
   object-fit: cover;
   border-radius: 0; /* connect edges */
@@ -843,7 +843,17 @@
 }
 .shop-hero-full {
   width: 100vw;
-  min-height: 100vh;
+  min-height: 110vh;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-left: calc(50% - 50vw);
+}
+
+
+.shop-top-banner {
+ width: 100vw;
+  min-height: 30vh;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -859,7 +869,7 @@
   }
   .shop-duo:first-of-type { padding-bottom: 0; }
   .shop-duo + .shop-duo { padding-top: 0; }
-  .shop-duo .duo-img { height: 40vh; border-radius: 10px; }
+  .shop-duo .duo-img { height: auto; border-radius: 10px; }
   .shop-duo .mb-30 { margin-bottom: 15px !important; }
   .shop-split {
     padding: 30px 0;
@@ -872,8 +882,23 @@
     margin-top: 20px;
     border-radius: 10px;
   }
+.shop-hero-full{
+  width: auto;
+  object-fit: contain;
+  height: auto;
+  min-height: 70vh;
+}
 }
 
+@media screen and (max-width: 592px){
+  
+.shop-hero-full{
+  width: auto;
+  object-fit: contain;
+  height: auto;
+  min-height: 50vh;
+}
+} 
 /* (Removed) Shop by Gender styles — now only in navbar */
 
 /* --------------- Blogs --------------- */
