--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -138,3 +138,14 @@
   object-fit: cover;
   border-radius: 12px;
 }
+
+
+@media screen and (max-width:568px) {
+  .about-hero-image {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+  background: #fff;
+}
+}
