--- a/src/components/homepage_components/HeroSectionV2.css
+++ b/src/components/homepage_components/HeroSectionV2.css
@@ -83,6 +83,12 @@
   .hero-v2-features {
     font-size: 14px;
   }
+  .hero-v2-buttons {
+  margin-top: 20px;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
 }
 
 .full-video-wrapper {
